[package]
name    = "oxc_regular_expression_wasm"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc                    = { version = "0.40.1", features = ["serialize"] }
oxc_regular_expression = "0.40.1"
serde                  = { version = "1.0.216", features = ["derive"] }
wasm-bindgen           = "0.2.99"
serde-wasm-bindgen     = "0.6.5"
tsify                  = "0.4.5"
