[package]
name    = "oxc_regular_expression_wasm"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oxc                    = { version = "0.68.1", features = ["serialize"] }
oxc_estree             = "0.68.1"
oxc_regular_expression = "0.68.1"
serde                  = { version = "1.0.219", features = ["derive"] }
wasm-bindgen           = "0.2.100"
serde-wasm-bindgen     = "0.6.5"
tsify                  = "0.5.5"
